--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "lint-staged": "^10.5.3"
   },
   "husky": {
     "hooks": {
@@ -34,7 +33,7 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint",
-    "*.{js,css,md}": "prettier --write"
-  }
+    "*.js": "eslint"
+  },
+  "prettier": "prettier-airbnb-config"
 }
