--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nanoid": "^3.1.20",
     "shortid": "^2.2.16",
     "ws": "^7.4.1"
   },
