--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "start.js",
-  "type": "module",
   "scripts": {
     "start": "start.js",
     "dev": "nodemon start.js",
@@ -21,6 +20,7 @@
     "ws": "^7.4.1"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   }
 }
