--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "install-all": "npm i && cd ./frontend && npm i && cd ../backend && npm i",
     "dev:frontend": "cd ./frontend && npm start",
     "dev:backend": "cd ./backend && npm run dev",
-    "lint": "npx eslint .",
+    "lint": "eslint .",
+    "test:backend": "cd ./backend && npm test",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
