--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "start.js",
     "dev": "nodemon start.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ./"
   },
   "author": "",
   "license": "ISC",
