--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:backend": "cd ./backend && npm run dev",
     "lint": "eslint .",
     "test:backend": "cd ./backend && npm test",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:backend"
   },
   "repository": {
     "type": "git",
