--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
 		"events": "^3.2.0",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.1",
+		"styled-components": "^5.2.1",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
