--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
 		"events": "^3.2.0",
+		"jest-styled-components": "^7.0.3",
 		"markdown-to-jsx": "^7.1.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
@@ -32,5 +33,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"react-test-renderer": "^17.0.1"
 	}
 }
