--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "install-all": "npm i && cd ./frontend && npm i && cd ../backend && npm i",
     "dev:frontend": "cd ./frontend && npm start",
     "dev:backend": "cd ./backend && npm run dev",
+    "lint:frontend": "cd ./frontend && eslint .",
     "lint": "eslint .",
     "test:backend": "cd ./backend && npm test",
     "test:frontend": "cd ./frontend && npm test",
-    "test": "npm run test:backend"
+    "test": "npm run test:backend && npm run test:frontend"
   },
   "repository": {
     "type": "git",
