--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jest-dom": "^3.6.5",
@@ -36,7 +37,8 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^4.3.6",
     "jest": "26.6.0",
-    "lint-staged": "^10.5.3"
+    "lint-staged": "^10.5.3",
+    "prettier": "2.2.1"
   },
   "husky": {
     "hooks": {
