--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint"
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
