--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,12 @@
 		"@testing-library/jest-dom": "^5.11.6",
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
-		"prop-types": "^15.7.2",
 		"events": "^3.2.0",
 		"jest-styled-components": "^7.0.3",
 		"markdown-to-jsx": "^7.1.1",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
+		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.1",
 		"styled-components": "^5.2.1",
