--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test"
+      "pre-commit": "lint-staged && npm run test --forceExit"
     }
   },
   "lint-staged": {
