remove watch from frontend tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:backend": "cd ./backend && prettier -c .; eslint .",
     "lint": "prettier -c .; eslint .",
     "test:backend": "cd ./backend && npm test",
-    "test:frontend": "cd ./frontend && npm test",
+    "test:frontend": "cd ./frontend && npm test -- --watchAll=false",
     "test": "npm run test:backend && npm run test:frontend"
   },
   "repository": {
@@ -43,7 +43,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test --forceExit"
+      "pre-commit": "lint-staged && npm run test"
     }
   },
   "lint-staged": {
