Add check-env to backend package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "start.js",
   "scripts": {
+    "prestart": "check-env EXPRESS_PORT=4000 SOCKET_PORT=4003",
     "start": "start.js",
+    "predev": "check-env EXPRESS_PORT=4000 SOCKET_PORT=4003",
     "dev": "nodemon start.js",
     "test": "jest ./"
   },
