--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,11 @@
-# This is a basic workflow to help you get started with Actions
+#
+# Builds and publishes coc image.
+#
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+name: COC Backend
 on:
   push:
-    branches: [ github-actions ]
+    branches: [ main ]
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -23,8 +22,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: mindovermiles262/coc:latest
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-        
+          tags: cardsofcarousal/backend:latest
+
