trying building based off branches

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -26,3 +26,26 @@ jobs:
           push: true
           tags: cardsofcarousal/backend:latest
 
+
+on:
+  push:
+    branches:
+      - ft/multistage-deploys
+
+jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: cardsofcarousal/backend:testing
