--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,31 +2,7 @@
 # Builds and publishes coc image.
 #
 
-name: COC Backend
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: cardsofcarousal/backend:latest
-
-
+name: Backend - Testing
 on:
   push:
     branches:
