trigger build on any kind of release?

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,12 +4,7 @@
 
 name: Backend - Production
 on:
-  release:
-    types:
-      - published
-      - created
-      - released
-      - edited
+  release
 
 jobs:
   docker:
