--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "prettier -c .; eslint .",
     "test:backend": "cd ./backend && npm test",
     "test:frontend": "cd ./frontend && npm test -- --watchAll=false",
-    "test": "npm run test:backend && npm run test:frontend"
+    "test": "npm run test:backend && npm run test:frontend",
+    "postinstall": "node ./node_modules/husky/lib/installer/bin install"
   },
   "repository": {
     "type": "git",
