Add more words to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
   "cSpell.words": [
     "Adderall",
+    "Arby's",
     "Assless",
     "Autocannibalism",
+    "BAFTA",
     "Bader",
     "Bannon",
     "Benaud",
+    "Bowflex",
     "Buble",
     "Buckfast",
     "Caillou",
@@ -15,16 +18,24 @@
     "Cortez",
     "Cumberbatch",
     "Doin",
+    "Douchebags",
     "Downey",
     "Eurosport",
+    "Eurovision",
+    "Figgy",
     "Fleshlight",
+    "Footlongs",
+    "Grammys",
     "Hannity",
     "Hillsborough",
     "Hortons",
     "Idris",
+    "Jizzing",
     "Kegels",
+    "Loko",
     "Lovin",
     "Macca's",
+    "Merkel",
     "Meryl",
     "O'Neal",
     "Ocasio",
@@ -38,10 +49,12 @@
     "Robo",
     "Rohypnol",
     "Roofied",
+    "Sabertooth",
     "Sanctimommies",
     "Shaquille",
     "Shyamalan",
     "Shyamalan's",
+    "Sigourney",
     "Steppenwolf",
     "Stig",
     "Streep",
@@ -62,6 +75,7 @@
     "bukkake",
     "didgeridildo",
     "douchebag",
+    "dunny",
     "durries",
     "ethnostate",
     "handjob",
