--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Ababwa",
     "Adderall",
     "Arby's",
     "Assless",
@@ -7,7 +8,11 @@
     "BAFTA",
     "Bader",
     "Bannon",
+    "Beckham's",
+    "Beebies",
     "Benaud",
+    "Bieber's",
+    "Borat",
     "Bowflex",
     "Buble",
     "Buckfast",
@@ -15,52 +20,93 @@
     "Cardi",
     "Chocula",
     "Cockasaurus",
+    "Collateralized",
     "Cortez",
     "Cumberbatch",
+    "Cybering",
+    "Dogg",
     "Doin",
     "Douchebags",
     "Downey",
+    "Duuuuuuude",
     "Eurosport",
     "Eurovision",
+    "Farage",
+    "Fentanyl",
     "Figgy",
+    "Flav",
+    "Flava",
     "Fleshlight",
     "Footlongs",
+    "Gaytime",
+    "Gloryholes",
+    "Goldfinger",
     "Grammys",
+    "Gurt",
+    "Gwyneth",
     "Hannity",
+    "Heteronormativity",
     "Hillsborough",
+    "Hoobastank",
+    "Hooning",
     "Hortons",
+    "Hutus",
     "Idris",
+    "Interspecies",
+    "Jedward",
     "Jizzing",
+    "Johansson's",
+    "Jong",
+    "Juuling",
+    "Kanye",
+    "Kazaa",
+    "Keanu",
     "Kegels",
     "Loko",
     "Lovin",
     "Macca's",
     "Merkel",
     "Meryl",
+    "Newfies",
+    "Nickelback",
     "O'Neal",
+    "O'Neal's",
     "Ocasio",
+    "Ohhhhh",
     "Oompa",
     "PTSD",
     "Palin's",
     "Pedic",
+    "Poopy",
+    "Poutine",
     "Prosti",
     "Pudsey",
     "Queefing",
+    "Radiohead's",
     "Robo",
     "Rohypnol",
     "Roofied",
+    "Roofies",
+    "SNES",
     "Sabertooth",
     "Sanctimommies",
+    "Savile",
+    "Scarlett",
+    "Schmirler",
+    "Scousers",
+    "Shapeshifters",
     "Shaquille",
     "Shyamalan",
     "Shyamalan's",
     "Sigourney",
+    "Skeletor",
     "Steppenwolf",
     "Stig",
     "Streep",
     "Tamagotchi",
     "Teletubby",
     "Tempur",
+    "Thom",
     "Treme",
     "Tutsis",
     "Twizzler",
@@ -69,19 +115,32 @@
     "Wearhouse",
     "Whiskas",
     "Wurly",
+    "Yorke",
+    "activiities",
+    "assed",
     "backsies",
     "ballsack",
+    "bazongas",
     "bogans",
     "bukkake",
+    "buttload",
+    "cummed",
+    "dawg",
     "didgeridildo",
+    "dipshit",
+    "diselman",
     "douchebag",
     "dunny",
     "durries",
     "ethnostate",
+    "fros",
+    "haaaaaaave",
     "handjob",
     "handjobs",
     "hoog",
     "jizz",
+    "ketamine",
+    "kugel",
     "macchiato",
     "micropenis",
     "micropig",
@@ -90,6 +149,8 @@
     "shitstain",
     "sideboob",
     "skidamarink",
+    "stanky",
+    "stiffy",
     "vajazzled",
     "vindaloo"
   ]
