--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
 		"events": "^3.2.0",
 		"jest-styled-components": "^7.0.3",
 		"markdown-to-jsx": "^7.1.1",
+		"nosleep.js": "^0.12.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
