Fix typo in actions file

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,7 @@ name: Tests
 on:
   push:
     branches: [ gh-actions-testing ]
-  pull_requests:
+  pull_request:
     branches: [ gh-actions-testing ]
 jobs:
   Explore-GitHub-Actions:
